chore(fontconfig): update fonts

--- a/config/fontconfig/conf.d/01-generic.conf
+++ b/config/fontconfig/conf.d/01-generic.conf
@@ -63,7 +63,7 @@
       <string>sans-serif</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>DejaVu Sans</string>
+      <string>Inter</string>
       <string>Noto Sans</string>
       <string>Twemoji</string>
       <string>Font Awesome 7 Free</string>
@@ -89,11 +89,12 @@
       <string>monospace</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
-      <string>DejaVu Sans Mono</string>
+      <string>JetBrains Mono</string>
       <string>Noto Sans</string>
       <string>Twemoji</string>
       <string>Font Awesome 7 Free</string>
       <string>Font Awesome 7 Brands</string>
+      <string>Symbols Nerd Font</string>
     </edit>
   </match>
   <!-- Other fonts -->
