--- a/config/fontconfig/conf.d/03-cn-font.conf
+++ b/config/fontconfig/conf.d/03-cn-font.conf
@@ -36,6 +36,14 @@
   </match>
   <match target="pattern">
     <test name="family">
+      <string>文泉驿微米黑</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+  <match target="pattern">
+    <test name="family">
       <string>WenQuanYi Zen Hei</string>
     </test>
     <edit binding="strong" mode="prepend" name="family">
