--- a/config/gtk-4.0/settings.ini
+++ b/config/gtk-4.0/settings.ini
@@ -1,11 +1,13 @@
 [Settings]
 gtk-application-prefer-dark-theme=true
+gtk-cursor-blink=true
+gtk-cursor-blink-time=1000
 gtk-cursor-theme-name=breeze_cursors
 gtk-cursor-theme-size=24
-gtk-decoration-layout=:minimize,maximize,close
+gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
-gtk-font-name=Sans Serif,  10
-gtk-icon-theme-name=WhiteSur-dark
+gtk-font-name=Noto Sans,  10
+gtk-icon-theme-name=WhiteSur
 gtk-primary-button-warps-slider=true
 gtk-sound-theme-name=ocean
 gtk-theme-name=Breeze
