--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,4 +1,4 @@
-theme = "Dark Modern"
+theme = "Catppuccin Mocha"
 
 window-width = 120
 window-height = 28
@@ -6,13 +6,13 @@ window-padding-balance = true
 
 font-size = 13
 font-family = "Maple Mono"
+font-feature = "none"
 
 mouse-hide-while-typing = true
 
 confirm-close-surface = false
 
 gtk-titlebar = false
-gtk-adwaita = false
 
 auto-update = off
 
