chore(qwen): 更新 Qwen Code 配置

--- a/config/qwen/settings.json
+++ b/config/qwen/settings.json
@@ -1,13 +1,28 @@
 {
+  "general": {
+    "disableAutoUpdate": true,
+    "disableUpdateNag": true,
+    "language": "zh",
+    "preferredEditor": "neovim"
+  },
   "security": {
     "auth": {
       "selectedType": "qwen-oauth"
     }
   },
   "$version": 2,
-  "tools": {
-  },
-  "context": {
-    "fileName": ["AGENTS.md", "QWEN.md"]
+  "mcpServers": {
+    "filesystem": {
+      "command": "podman",
+      "args": [
+        "run",
+        "-i",
+        "--rm",
+        "--mount",
+        "type=bind,src=${PWD},dst=/projects",
+        "mcp/filesystem",
+        "/projects"
+      ]
+    }
   }
 }
