feat(container): 增加镜像

--- a/config/containers/registries.conf
+++ b/config/containers/registries.conf
@@ -1,11 +1,35 @@
+unqualified-search-registries = ["docker.io", "quay.io", "ghcr.io"]
+
 [[registry]]
 prefix = "docker.io"
+location = "docker.io"
+
+[[registry.mirror]]
+location = "9gzrq6w1.mirror.aliyuncs.com"
+
+[[registry.mirror]]
 location = "docker.m.daocloud.io"
 
 [[registry]]
 prefix = "quay.io"
+location = "quay.io"
+
+[[registry.mirror]]
 location = "quay.m.daocloud.io"
 
 [[registry]]
 prefix = "ghcr.io"
+location = "ghcr.io"
+
+[[registry.mirror]]
+location = "ghcr.milu.moe"
+
+[[registry.mirror]]
 location = "ghcr.m.daocloud.io"
+
+[[registry]]
+prefix = "mcr.microsoft.com"
+location = "mcr.microsoft.com"
+
+[[registry.mirror]]
+location = "mcr.m.daocloud.io"
