feat(systemd): 用%h替代用户目录

--- a/config/systemd/user/aria2.service
+++ b/config/systemd/user/aria2.service
@@ -4,7 +4,7 @@ Description=Aria2 download service
 [Service]
 Type=simple
 ExecStartPre=/usr/bin/touch /tmp/aria2.session
-ExecStart=/usr/bin/aria2c --conf-path=/home/iFlygo/.config/aria2/aria2.conf
+ExecStart=/usr/bin/aria2c --conf-path=%h/.config/aria2/aria2.conf
 Restart=always
 
 [Install]
