--- a/config/nvim/Justfile
+++ b/config/nvim/Justfile
@@ -1,2 +1,4 @@
 clean:
-  rm -rf ~/.local/share/nvim/site/pack/*
+  rm -rf ~/.local/share/nvim/*
+  rm -rf ~/.local/state/nvim/*
+  rm -rf ~/.cache/nvim/*
